# FastAPI-Simple-Template-with-SQLModel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.ps1  start.sh
main/: __init__.py  __main__.py  app.py  dependencies.py  items.py  main.py  models.py  seller.py
main/user/: __init__.py  crud.py
