[project]
name = "FastAPI-simple-example-with-SQLmodel"
dynamic = ["version"]
description = "A simple example of using FastAPI and SQLmodel together. This example is based on the official tutorial of FastAPI and SQLmodel. Used as reference for future projects."
authors = [
    {name = "Vincent Son", email = "107471539+szw0407@users.noreply.github.com"},
]
dependencies = [
    "fastapi[all]>=0.109.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlmodel>=0.0.14",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fastapi", "sqlmodel", "JWT", "authentication", "authorization"]

[project.scripts]
start-server = "main:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn main:app --reload"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "main/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
includes = ["start.sh", "start.ps1", "requirements.txt", "main"]
excludes = ["__pycache__", "*.pyc", "*.pyo"]

